// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH define sheet NATIVE 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "backgroundColor: red /*sheet.root/$switch.isOpened*/",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "borderColor: cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          "backgroundColor: brown /*sheet.root/$native/$switch.isOpened*/",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`SWITCH define sheet WEB 1`] = `
Object {
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { background-color:red /*sheet.root/$switch.isOpened*/ }",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          ".b { border-color:cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/ }",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
      Object {
        "atomicArray": Array [
          ".c:hover { background-color:green /*sheet.root/$web/:hover/$switch.isClosed[0]*/ }",
        ],
        "conditions": Array [
          Object {
            "case": "isClosed",
            "type": "$switch",
          },
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d:hover { background-color:yellow /*sheet.webOnly/$web/:hover/$switch.isOpened*/ }",
        ],
        "conditions": Array [
          Object {
            "case": "isOpened",
            "type": "$switch",
          },
        ],
      },
    ],
    "name": "webOnly",
    "~": "c",
  },
}
`;

exports[`SWITCH using sheet NATIVE 1`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE, OPENED
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [
    "backgroundColor: red /*sheet.root/$switch.isOpened*/",
    "borderColor: cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/",
    "backgroundColor: brown /*sheet.root/$native/$switch.isOpened*/",
  ],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
backgroundColor: brown /*sheet.root/$native/$switch.isOpened*/
borderColor: cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {
    "backgroundColor": "brown",
    "borderColor": "cyan",
  },
]
`;

exports[`SWITCH using sheet NATIVE 2`] = `
Array [
  "
##########################################
##########################################
#
#  NATIVE, CLOSED
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  Array [],
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  Object {},
]
`;

exports[`SWITCH using sheet WEB 1`] = `
Array [
  "
##########################################
##########################################
#
#  WEB, OPENED
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
.a { background-color:red /*sheet.root/$switch.isOpened*/ }
.b { border-color:cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/ }
.d:hover { background-color:yellow /*sheet.webOnly/$web/:hover/$switch.isOpened*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
.d:hover { background-color:yellow /*sheet.webOnly/$web/:hover/$switch.isOpened*/ }
.b { border-color:cyan /*sheet.root/$switch.isOpened/$switch.isOpened*/ }
.a { background-color:red /*sheet.root/$switch.isOpened*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "d b a",
]
`;

exports[`SWITCH using sheet WEB 2`] = `
Array [
  "
##########################################
##########################################
#
#  WEB, CLOSED
#
##########################################
##########################################
",
  "
******************************************
*  QUERY TO STHEET
******************************************
",
  "
.c:hover { background-color:green /*sheet.root/$web/:hover/$switch.isClosed[0]*/ }",
  "
******************************************
*  APPLY LASTWINS STRATEGY
******************************************
",
  "
.c:hover { background-color:green /*sheet.root/$web/:hover/$switch.isClosed[0]*/ }",
  "
******************************************
*  FINALIZE FOR for web's className or native's style
******************************************
",
  "c",
]
`;
